--- a/style.css
+++ b/style.css
@@ -31,6 +31,14 @@ h1{
   padding: 15px 40px;
   border: none;
 }
+#btn1{
+  background-color: #4fa10f;
+  color: white;
+}
+#btn2{
+    background-color:#502550;
+    color: white;
+  }
 .copycode h2{
    text-align: center;
 }
